--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Courseara!<h1>
+<h1>Hello Courseara! It's a great course<h1>
 </body>
 </html>
